# ChangeLog for dev-perl/Class-ErrorHandler
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-ErrorHandler/ChangeLog,v 1.7 2006/01/13 18:18:48 mcummings Exp $

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  Class-ErrorHandler-0.01.ebuild:
  Marking stable sparc x86

  11 Jan 2006; <plasmaroo@gentoo.org> Class-ErrorHandler-0.01.ebuild:
  Mark ~ia64; bug #112279.

  02 Dec 2005; Fernando J. Pereda <ferdy@gentoo.org>
  Class-ErrorHandler-0.01.ebuild:
  marked ~alpha wrt bug #112279

  14 Nov 2005; Michael Hanselmann <hansmi@gentoo.org>
  Class-ErrorHandler-0.01.ebuild:
  Added to ~ppc and ~hppa. See bug #112279.

  13 Nov 2005; <ranger@gentoo.org> Class-ErrorHandler-0.01.ebuild:
  Marking Class-ErrorHandler-0.01 ~ppc64 for bug 112279

*Class-ErrorHandler-0.01 (12 Nov 2005)

  12 Nov 2005; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +Class-ErrorHandler-0.01.ebuild:
  New dep for dev-perl/convert-pem
