@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-ErrorHandler/Attic/Class-ErrorHandler-0.01.ebuild,v 1.7 2006/01/13 18:18:48 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-ErrorHandler/Attic/Class-ErrorHandler-0.01.ebuild,v 1.8 2006/01/18 12:11:14 gmsoft Exp $
 
 inherit perl-module
 
@@ -11,7 +11,7 @@ SRC_URI="mirror://cpan/authors/id/B/BT/BTROTT/${P}.tar.gz"
 LICENSE="|| ( Artistic GPL-2 )"
 SLOT="0"
 #KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86"
-KEYWORDS="~alpha ~hppa ~ia64 ~ppc ~ppc64 sparc x86"
+KEYWORDS="~alpha hppa ~ia64 ~ppc ~ppc64 sparc x86"
 IUSE=""
 SRC_TEST="do"
 
