@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/convert-pem/Attic/convert-pem-0.07.ebuild,v 1.5 2006/01/13 19:18:37 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/convert-pem/Attic/convert-pem-0.07.ebuild,v 1.6 2006/01/18 12:11:43 gmsoft Exp $
 
 inherit perl-module
 
@@ -13,7 +13,7 @@ SRC_URI="mirror://cpan/authors/id/B/BT/BTROTT/${MY_P}.tar.gz"
 LICENSE="|| ( Artistic GPL-2 )"
 SLOT="0"
 #KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86"
-KEYWORDS="~alpha ~hppa ~ia64 ~ppc sparc x86"
+KEYWORDS="~alpha hppa ~ia64 ~ppc sparc x86"
 IUSE=""
 
 DEPEND="perl-core/MIME-Base64
