@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/convert-pem
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/convert-pem/ChangeLog,v 1.20 2006/01/13 19:18:37 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/convert-pem/ChangeLog,v 1.21 2006/01/18 12:11:43 gmsoft Exp $
+
+  18 Jan 2006; Guy Martin <gmsoft@gentoo.org> convert-pem-0.07.ebuild:
+  Stable on hppa.
 
   13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
   convert-pem-0.07.ebuild:
