@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Class-ErrorHandler
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-ErrorHandler/ChangeLog,v 1.7 2006/01/13 18:18:48 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-ErrorHandler/ChangeLog,v 1.8 2006/01/18 12:11:14 gmsoft Exp $
+
+  18 Jan 2006; Guy Martin <gmsoft@gentoo.org>
+  Class-ErrorHandler-0.01.ebuild:
+  Stable on hppa.
 
   13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
   Class-ErrorHandler-0.01.ebuild:
